# internal/domain/dto/movies/dto.go
@@ -7,11 +7,12 @@ import (
 )
 
 type MoviesShort struct {
-	Id        uuid.UUID `json:"id"`
-	Title     string    `json:"title"`
-	ImgUrl    string    `json:"imgUrl"`
-	Genres    []string  `json:"genres"`
-	AvgRating float64   `json:"avgRating"`
+	Id              uuid.UUID `json:"id"`
+	Title           string    `json:"title"`
+	ImgUrl          string    `json:"imgUrl"`
+	Genres          []string  `json:"genres"`
+	AvgRating       float64   `json:"avgRating"`
+	SimilarityScore float64   `json:"similarityScore,omitempty"`
 }
 
 type MoviesFull struct {
