# internal/endpoint/controller/http/api/v1/movies/controller.go
@@ -2,6 +2,7 @@ package movies
 
 import (
 	"context"
+	"fmt"
 	"rv/internal/domain/dto/request"
 	resp "rv/internal/domain/dto/response"
 	apperrors "rv/internal/errors"
@@ -9,6 +10,7 @@ import (
 	"rv/pkg/applogger"
 	"rv/pkg/constants"
 	"rv/pkg/response"
+	"rv/pkg/util"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
@@ -18,6 +20,7 @@ import (
 type moviesService interface {
 	GetMoviesShort(ctx context.Context, req request.GetMoviesShortRequest, host string) (*resp.GetMoviesShortResponse, error)
 	GetMovieFull(ctx context.Context, req request.GetMovieFullRequest, host string) (*resp.GetMovieFullResponse, error)
+	GetPersonalRecomedations(ctx context.Context, req request.GetPersonalRecomendationsRequest, host string) (*resp.GetMoviesShortResponse, error)
 }
 
 type Controller struct {
@@ -38,10 +41,11 @@ func NewController(logger applogger.Logger, builder *response.Builder, moviesSer
 
 func (h *Controller) Init(api, authApi *gin.RouterGroup) {
 	movies := api.Group("/movies")
-	//moviesAuth := authApi.Group("/movies")
+	moviesAuth := authApi.Group("/movies")
 	{
 		movies.GET("/short/:page", h.getMoviesShort)
 		movies.GET("/full/:id", h.getMovie)
+		moviesAuth.GET("/recomendations/user", h.getPersonalRecomedations)
 	}
 }
 
@@ -91,7 +95,7 @@ func (h *Controller) getMoviesShort(c *gin.Context) {
 // @Param X-Request-Id header string true "Request id identity"
 // @Success 200 {object} response.Response{data=resp.GetMovieFullResponse}
 // @Failure 400 {object} response.Response{} "possible codes: bind_path, invalid_X-Request-Id"
-// @Router /rl/api/v1/movies/short/{id} [get]
+// @Router /rl/api/v1/movies/full/{id} [get]
 func (h *Controller) getMovie(c *gin.Context) {
 	ctx := c.Request.Context()
 	var req request.GetMovieFullRequest
@@ -102,6 +106,35 @@ func (h *Controller) getMovie(c *gin.Context) {
 	}
 	req.MovieId = movieId
 	resp, err := h.moviesService.GetMovieFull(ctx, req, c.Request.Host)
+	if err != nil {
+		_ = c.Error(err)
+		return
+	}
+
+	c.AbortWithStatusJSON(h.builder.BuildSuccessResponseBody(ctx, resp))
+}
+
+// @Summary get_personal_recomendations
+// @Description получить рекомендации для пользователя
+// @Tags movies
+// @Produce json
+// @Param Authorization header string true "Authorization"
+// @Param X-Request-Id header string true "Request id identity"
+// @Success 200 {object} response.Response{data=resp.GetMovieFullResponse}
+// @Failure 400 {object} response.Response{} "possible codes: bind_path, invalid_X-Request-Id"
+// @Router /rl/api/v1/movies/recomendations/personal/user [get]
+func (h *Controller) getPersonalRecomedations(c *gin.Context) {
+	ctx := c.Request.Context()
+	fmt.Println(ctx.Value(constants.UserIdCtx))
+	userId, err := util.GetUserId(ctx)
+	if err != nil {
+		_ = c.Error(apperror.NewBadRequestError(err.Error(), constants.BindPathError))
+		return
+	}
+	req := request.GetPersonalRecomendationsRequest{
+		UserId: userId,
+	}
+	resp, err := h.moviesService.GetPersonalRecomedations(ctx, req, c.Request.Host)
 	if err != nil {
 		_ = c.Error(err)
 		return
